<resources>
    <string name="app_name">MinioWitter</string>
    <string name="log_in">LOG IN</string>
    <string name="sign_in">SIGN IN</string>
    <string name="username">Username</string>
    <string name="name">Name</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="type_password_again">Type Password Again</string>
    <string name="register">REGISTER</string>
    <string name="already_a_user_login">Already a User? LogIn</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="new_to_miniowitter_register">New to MinioWitter? Register</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="post">POST</string>
    <string name="search">Search</string>
    <string name="edit_profile">EDIT PROFILE</string>
    <string name="register_using_google">Register using google</string>
</resources>