<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:gravity="center"
    android:padding="12dp"
    android:layout_height="match_parent"
    tools:context=".SignupActivty">

    <ImageView
        android:layout_width="314dp"
        android:layout_height="248dp"
        android:src="@drawable/logo" />
    
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/edit_text_bg"
        android:layout_marginTop="15dp"
        android:hint="@string/username"
        android:padding="10dp"
        android:id="@+id/username"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/edit_text_bg"
        android:layout_marginTop="15dp"
        android:hint="@string/name"
        android:padding="10dp"
        android:id="@+id/name"/>
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/edit_text_bg"
        android:layout_marginTop="15dp"
        android:hint="@string/email"
        android:padding="10dp"
        android:id="@+id/email"/>
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/edit_text_bg"
        android:layout_marginTop="15dp"
        android:hint="@string/password"
        android:padding="10dp"
        android:id="@+id/password"/>
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/edit_text_bg"
        android:layout_marginTop="15dp"
        android:hint="@string/type_password_again"
        android:padding="10dp"
        android:id="@+id/repassword"/>
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/button_bg"
        android:layout_marginTop="15dp"
        android:padding="10dp"
        android:text="@string/register"
        android:textSize="18sp"
        android:id="@+id/register"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/already_a_user_login"
        android:layout_marginTop="15dp"
        android:id="@+id/login_user"/>

</LinearLayout>